--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 송현석
+title: PORTFOLIO by 송현석
 email: sheuerit@gmail.com
 url: https://github.com/sheuerit/sheuerit.io
 description: "책임감을 바탕으로 항상 노력하고 즐기는 개발자"
