--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ address:
   - line: 궁동 471-6
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+credits: 'This Portfolio is made by Hyun Suk Song who truly wanna do coding'
 
 # Build settings
 markdown: kramdown
