--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ address:
   - line: 궁동 471-6
 
 # Credits content
-credits: 'This Portfolio is made by Hyun Suk Song who truly wanna do coding'
+credits: 'Made by Hyun Suk Song only.'
 
 # Build settings
 markdown: kramdown
