--- a/_config.yml
+++ b/_config.yml
@@ -39,14 +39,14 @@ footer:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  # - title: twitter
-  #   url: http://twitter.com/jekyllrb
-  # - title: facebook
-  #   url:
-  # - title: stack-overflow
-  #   url: http://stackoverflow.com/questions/tagged/jekyll
-  # - title: bitbucket
-  #   url: http://bitbucket.org/jekyll
+  - title: twitter
+    url: 
+  - title: facebook
+    url:
+  - title: stack-overflow
+    url: 
+  - title: bitbucket
+    url: 
   - title: github
     url: http://github.com/sheuerit
 
@@ -56,7 +56,7 @@ address:
   - line: 궁동 471-6
 
 # Credits content
-credits: 'Made by Hyun Suk Song only.'
+credits: 'Made by Hyun Suk Song only. sheuerit@gmail.com'
 
 # Build settings
 markdown: kramdown
