--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: https://github.com/sheuerit/sheuerit.io
 description: "책임감을 바탕으로 항상 노력하고 즐기는 개발자"
 keywords: "책임감, 협동심, 인내력"
 skills: "코딩이 재미있는 신입 개발자입니다."
-comment: "포기하지 않는 끈기와 과정을 즐기는 자세로 임하겠습니다."
+comment: "포기하지 않고 과정을 즐기는 자세로 임하겠습니다."
 meta_author: 송현석
 
 # Google webmaster tools
